--- a/ex_10formularioComSeletores/index.html
+++ b/ex_10formularioComSeletores/index.html
@@ -10,6 +10,6 @@
         <p>Nome:</p> <input type="text" name="nome">
      <br>
     <br>
-    <input type="checkbox" name="termodeconsentiento" id="">eu aceito os<a href=""> termos</a>
+    <input type="checkbox" name="termodeconsentiento" id="">eu aceito os<a href=""> termos.</a>
     </body>
 </html>
