--- a/ex_10formularioComSeletores/index.html
+++ b/ex_10formularioComSeletores/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario com checkbox e radiobox</title>
-</head>
+   </head>
 <body>
     <form action="">
         <p>Nome:</p> <input type="text" name="nome">
      <br>
     <br>
     <input type="checkbox" name="termodeconsentiento" id="">eu aceito os<a href=""> termos.</a>
-    </body>
+    <br>
+    <input type="text" name="nome" value="Danielli">
+    <br>
+    <br>
+    <input type="text"name="endereco" placeholder="Digite aqui seu endereço">
+    <!-- place holder deixa a sugestão de texto -->
+     <br> 
+     <br>
+    <input type="text"name="escola" value="não alteravel" readonly>
+    <br>
+    <br>
+    <input type="text" name="escola" value="campo desabilitado" disabled>
+    <br>
+    <br>
+    <input type="text" name="ano" value="limitado" maxlength="4">
+    <br><br>
+    <input type="text" name="email" required>
+    <br><br>
+    <input type="submit" value="Enviar">
+        </body>
 </html>
