--- a/ex_12_outrastags/index.html
+++ b/ex_12_outrastags/index.html
@@ -16,7 +16,7 @@
     <p>A tag itálico<strong> <em>tag em </em></strong> tem valor semântico.</p>
     <p>A <strong><i>tag i </i></strong>também derve porém sem valor semântico</p>
     <hr>
-    <h2 style="color:blueviolet;">Este é um exemplo da tag <span style="color:blue;">sub</span></h2>
+    <h2 style="color:blueviolet;">Este é um exemplo da tag <span style="color:pink;">sub</span></h2>
     <p>A tag subscrito <strong>sub</strong> tem valor semântico</p>
     <p>Qualquer <sub>desenvolvedor</sub> Front-End.</p>
     <hr>
